# rust-wast-ex1

./: Cargo.toml  Readme.md
src/: index.html
